--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,8 +10,7 @@
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-
-    <!-- Le styles -->
+	<link href="{{url_for('static', filename='css/design.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename='css/bootstrap.css')}}" rel="stylesheet">
     <style type="text/css">
       body {
