--- a/templates/test.html
+++ b/templates/test.html
@@ -7,15 +7,44 @@
         <br />
         
         <p class="lead">
+        	<ol class="progtrckr" data-progtrckr-steps="3">
+     <li id="status_1" class="progtrckr-todo">Waiting</li>
+     <li id="status_2" class="progtrckr-todo">Processing</li>
+     <li id="status_3" class="progtrckr-todo">Finished</li>
+    </ol>
             <div id="status"></div>
             <br />
-            <div id="loader"><img src="{{url_for('static', filename='ajax-loader.gif')}}" /></div>
+           
         </p>
       <hr />
         <table  class="table table-striped table-bordered" id="cookies" width="100%"><tr><th>Domain</th><th>Name</th><th>Value</th></table>
       </div>
 
   <script type="text/javascript">
+ 
+ 
+function set_status(status) {
+	switch(status) {
+		case 1:
+			$('#status_1').attr('class', 'progtrckr-current');
+			$('#status_2').attr('class', 'progtrckr-todo');
+			$('#status_3').attr('class', 'progtrckr-todo');
+			break;
+		
+		case 2:
+			$('#status_1').attr('class', 'progtrckr-done');
+			$('#status_2').attr('class', 'progtrckr-current');
+			$('#status_3').attr('class', 'progtrckr-todo');
+			break;
+		
+		case 3:
+			$('#status_1').attr('class', 'progtrckr-done');
+			$('#status_2').attr('class', 'progtrckr-done');
+			$('#status_3').attr('class', 'progtrckr-done');
+			break;
+	}
+	
+}
 function refresh() {
   $.get('/js-test-info/{{test.id}}', function(data) {
     var test = data.test;
@@ -36,13 +65,14 @@ function refresh() {
         break;
     }
 
-    $('#status').html('Started: '+test.datetime[1]+' '+test.datetime[0]+'<br />Status: '+status+'<br />'+
+	set_status(test.status);
+    $('#status').html('Started: '+test.datetime[1]+' '+test.datetime[0]+'<br />'+
       'Info: '+test.info+'<br />');
 
 
 
     if(test.status == 3) {
-      $('#loader').hide();
+      
       clearInterval(x);
 
       //get cookies
