--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
         <h2>Check your cookies</h2>
         <br />
         <p class="lead">
-            Domain: <input placeholder="http://example.com" type="text" name="domain" />
+            Domain: http://<input placeholder="example.com" type="text" name="domain" />
         </p>
 
         <input type="submit" class="btn btn-large btn-success" value="Check" />
