--- a/templates/layout.html
+++ b/templates/layout.html
@@ -76,6 +76,9 @@
       </div>
 
     </div> <!-- /container -->
-
+    <script type="text/javascript">
+    {% block javascript %}
+    {% endblock %}
+    </script>
   </body>
 </html>
