--- a/templates/test.html
+++ b/templates/test.html
@@ -12,12 +12,12 @@
      <li id="status_2" class="progtrckr-todo">Processing</li>
      <li id="status_3" class="progtrckr-todo">Finished</li>
     </ol>
-            <div id="status"></div>
+            <div id="error"></div>
             <br />
            
         </p>
       <hr />
-        <table  class="table table-striped table-bordered" id="cookies" width="100%"><tr><th>Domain</th><th>Name</th><th>Value</th></table>
+        <table  class="table table-striped table-bordered" id="cookies" width="100%"><tr><th>Domain</th><th>Name</th><th>Expires</th><th>Value</th></table>
       </div>
 
   <script type="text/javascript">
@@ -45,6 +45,8 @@ function set_status(status) {
 	}
 	
 }
+
+
 function refresh() {
   $.get('/js-test-info/{{test.id}}', function(data) {
     var test = data.test;
@@ -66,8 +68,14 @@ function refresh() {
     }
 
 	set_status(test.status);
-    $('#status').html('Started: '+test.datetime[1]+' '+test.datetime[0]+'<br />'+
-      'Info: '+test.info+'<br />');
+
+  
+
+    if(test.info!=null) {
+      $('#status_2').attr('class', 'progtrckr-error');
+      $('#status_3').attr('class', 'progtrckr-error');
+      $('#error').html('Error: '+test.info);
+    }
 
 
 
@@ -81,7 +89,22 @@ function refresh() {
 
         for(c in cookies) {
           c = cookies[c];
-          $('#cookies').append('<tr><td>'+c.domain+'</td><td>'+c.name+'</td><td>'+c.value.substring(0,50)+'</td></tr>');
+
+          var d = Date.parse(c.expires);
+
+          if(isNaN(d)) {
+            d = c.expires;
+          }else{
+            d=d/1000;
+          }
+
+          if (d != null) {
+            var date = d;
+          }else{
+            var date="session";
+          }
+
+          $('#cookies').append('<tr><td>'+c.domain+'</td><td>'+c.name+'</td><td>'+date+'</td><td>'+c.value.substring(0,50)+'</td></tr>');
         }
       });
     }
