url instead of id

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,9 @@
         <p class="lead">
             Domain: http://<input placeholder="example.com" type="text" name="domain" />
         </p>
+        
+        <input type="checkbox" checked="checked" name="public" value="yes" />
+        <span class="checkboxtext">Make results public (show them under History tab)<br /><br /></span>
 
         <input type="submit" class="btn btn-large btn-success" value="Check" />
       </div>
