--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,10 @@
             Domain: http://<input placeholder="example.com" type="text" name="domain" />
         </p>
         
-        <input type="checkbox" checked="checked" name="public" value="yes" />
-        <span class="checkboxtext">Make results public (show them under History tab)<br /><br /></span>
-
+        <input id="cb" type="checkbox" class="regular-checkbox big-checkbox" checked="checked" name="public" value="yes" />
+        <label for="cb"></label>
+        <span class="checkboxtext">Make results public (show them under History tab)</span>
+<br /><br />
         <input type="submit" class="btn btn-large btn-success" value="Check" />
       </div>
 
