--- a/static/css/design.css
+++ b/static/css/design.css
@@ -86,7 +86,8 @@ ol.progtrckr {
 
    
    ol.progtrckr li.progtrckr-error:before {
-    content: "\2713";
+    content: "x";
+    font-weight:bold;
     color: white;
     background-color: red;
     height: 2.2em;
@@ -101,19 +102,62 @@ ol.progtrckr {
     color:red;
    }
 
-   input[type=checkbox]
-{
-  /* Double-sized Checkboxes */
-  -ms-transform: scale(2); /* IE */
-  -moz-transform: scale(2); /* FF */
-  -webkit-transform: scale(2); /* Safari and Chrome */
-  -o-transform: scale(2); /* Opera */
-  padding: 10px;
+
+
+.checkboxtext {
+ position: relative;
+ padding: 9px;
+ font-size: 110%;
+ display: inline-block;
+ bottom: 12px;
 }
 
-.checkboxtext
-{
-  /* Checkbox text */
-  font-size: 110%;
+label {
   display: inline;
+}
+
+.regular-checkbox {
+  display: none;
+}
+
+.regular-checkbox + label {
+  background-color: #fafafa;
+  border: 1px solid #cacece;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+  padding: 9px;
+  border-radius: 3px;
+  display: inline-block;
+  position: relative;
+}
+
+.regular-checkbox + label:active, .regular-checkbox:checked + label:active {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+
+.regular-checkbox:checked + label {
+  background-color: #e9ecee;
+  border: 1px solid #adb8c0;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+  color: #99a1a7;
+}
+
+.regular-checkbox:checked + label:after {
+  content: '\2714';
+  font-size: 14px;
+  position: absolute;
+  top: 0px;
+  left: 3px;
+  color: #99a1a7;
+}
+
+
+.big-checkbox + label {
+  padding: 12px;
+}
+
+.big-checkbox:checked + label:after {
+  font-size: 22px;
+  color: #51a351;
+  left: 3px;
+  top:3px;
 }
