--- a/templates/test.html
+++ b/templates/test.html
@@ -17,7 +17,7 @@
            
         </p>
       <hr />
-        <table  class="table table-striped table-bordered" id="cookies" width="100%"><tr><th>Domain</th><th>Name</th><th>Expires</th><th>Value</th></table>
+        <table  class="table table-striped table-bordered" id="cookies" width="100%"></table>
       </div>
 
   <script type="text/javascript">
@@ -88,9 +88,13 @@ function refresh() {
       
       clearInterval(x);
 
+    }
+
       //get cookies
       $.get('/js-get-cookies/{{test.url}}', function(data) {
         cookies = data.cookies;
+
+        $('#cookies').html('<tr><th>Domain</th><th>Name</th><th>Expires</th><th>Value</th></tr>');
 
         for(c in cookies) {
           c = cookies[c];
@@ -112,7 +116,7 @@ function refresh() {
           $('#cookies').append('<tr><td>'+c.domain+'</td><td>'+c.name+'</td><td>'+date+'</td><td>'+c.value.substring(0,50)+'</td></tr>');
         }
       });
-    }
+    
   });
 }
 
