--- a/templates/test.html
+++ b/templates/test.html
@@ -3,7 +3,7 @@
 {% block body %}
  <div class="jumbotron">
         
-        <h2>Test #{{test.id}} for {{test.domain}}</h2>
+        <h2>Test for {{test.domain}}</h2>
         <br />
         
         <p class="lead">
@@ -17,7 +17,7 @@
            
         </p>
       <hr />
-        <table  class="table table-striped table-bordered" id="cookies" width="100%"></table>
+        <div id="cookies"></div>
       </div>
 
   <script type="text/javascript">
@@ -92,29 +92,48 @@ function refresh() {
 
       //get cookies
       $.get('/js-get-cookies/{{test.url}}', function(data) {
-        cookies = data.cookies;
+        urls = data.urls;
 
-        $('#cookies').html('<tr><th>Domain</th><th>Name</th><th>Expires</th><th>Value</th></tr>');
+        console.log(urls);
 
-        for(c in cookies) {
-          c = cookies[c];
+        i = 0;
+        table = function(id) { return '<table  class="table table-striped table-bordered" id="'+id+'" width="100%"><tr><th>Domain</th><th>Name</th><th>Expires</th><th>Value</th></tr></table><br />'; }
 
-          var d = Date.parse(c.expires);
+        $('#cookies').html('');
 
-          if(isNaN(d)) {
-            d = c.expires;
-          }else{
-            d=d/1000;
-          }
+        var existing_cookie = {};
 
-          if (d != null) {
-            var date = d;
-          }else{
-            var date="session";
-          }
+        for(u in urls) {
+            u = urls[u];
+            $('#cookies').append('<h4>'+u.url.url+'</h4>'+table('t'+i));
+            for(c in u.cookies) {
+              c = u.cookies[c];
 
-          $('#cookies').append('<tr><td>'+c.domain+'</td><td>'+c.name+'</td><td>'+date+'</td><td>'+c.value.substring(0,50)+'</td></tr>');
+              if(!existing_cookie[c.name+'_'+c.domain]) {
+                  existing_cookie[c.name+'_'+c.domain] = true;
+                  var d = Date.parse(c.expires);
+
+                  if(isNaN(d)) {
+                    d = c.expires;
+                  }else{
+                    d=d/1000;
+                  }
+
+                  if (d != null) {
+                    var date = d;
+                  }else{
+                    var date="session";
+                  }
+
+                  $('#t'+i).append('<tr><td>'+c.domain+'</td><td>'+c.name+'</td><td>'+date+'</td><td>'+c.value.substring(0,50)+'</td></tr>');
+              }
+
+              
+            }
+            i=i+1
         }
+
+        
       });
     
   });
